# libvm

./: .gitmodules  CMakeLists.txt  SharemindLibVmConfig.cmake.in  SharemindLibVmConfigVersion.cmake.in  SharemindLibvmConfig.cmake.in  SharemindLibvmConfigVersion.cmake.in
src/: CodeSection.cpp  CodeSection.h  CommonInstructionMacros.h  CommonIntructionMacros.h  Core.cpp  Core.h  DataSection.cpp  DataSection.h  LastError.h  MemoryMap.cpp  MemoryMap.h  MemorySlot.cpp  MemorySlot.h  PdpiCache.cpp  PdpiCache.h  PreparationBlock.h  Process.cpp  Process.h  ProcessFacilityMap.cpp  ProcessFacilityMap.h  Process_p.h  Program.cpp  Program.h  Program_p.h  PublicMemory.cpp  PublicMemory.h  References.cpp  References.h  StackFrame.h  Vm.cpp  Vm.h  Vm_p.h  codesection.h  codesectionsvector.h  core.c  core.cpp  core.h  datasection.h  datasectionsizesvector.h  datasectionsvector.h  (+31 more)
src/libsmvm/: api_0x1.c  api_0x1.h  libsmvm.pro  modules.c  modules.h  modules_cxx.h  references.c  references.h  syscall.c  syscall.h  syscallmap.c  syscallmap.h  vm.h  vm_internal_core.c  vm_internal_core.h  vm_internal_helpers.c  vm_internal_helpers.h
src/sharemind/: CMakeLists.txt
src/sharemind/libsmvm/: vm.h  vm_internal_core.c  vm_internal_helpers.c  vm_internal_helpers.h
src/sharemind/libvm/: codesection.h  codesectionsvector.h  core.c  core.h  core_profile.c  core_run.c  datasection.h  datasectionsizesvector.h  datasectionsvector.h  framestack.h  instrmap.h  instrset.h  libvm.h  memoryinfo.h  memoryinfostatistics.h  memorymap.h  memoryslot.h  pdbindingsvector.h  pdpicache.h  privatememorymap.h  process.c  process.h  profile.h  program.c  program.h  references.h  registervector.h  rodataspecials.h  rwdataspecials.h  stackframe.h  syscallbindingsvector.h  vm.c  vm.h  vm_internal_core.c  vm_internal_core.h  vm_internal_helpers.c  vm_internal_helpers.h
